# etc/api-docs.json
@@ -74,6 +74,96 @@
                 }
             }
         },
+        "/api/v1/database/details": {
+            "get": {
+                "tags": ["database-controller"],
+                "operationId": "details",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/TableDetailsResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/aggregation/timestamps": {
+            "get": {
+                "tags": ["aggregation-controller"],
+                "operationId": "aggregationTimeStamps",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ArrayNode"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/aggregation/speed": {
+            "get": {
+                "tags": ["aggregation-controller"],
+                "operationId": "aggregationSpeed",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ArrayNode"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/aggregation/miles": {
+            "get": {
+                "tags": ["aggregation-controller"],
+                "operationId": "aggregationMiles",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ArrayNode"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/aggregation/engines": {
+            "get": {
+                "tags": ["aggregation-controller"],
+                "operationId": "aggregationEngines",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ArrayNode"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/database/delete/{entityName}": {
             "delete": {
                 "tags": ["database-controller"],
@@ -160,6 +250,9 @@
                         }
                     }
                 }
+            },
+            "ArrayNode": {
+                "type": "object"
             }
         }
     }
